--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,14 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="build/assets/css/index.css"></link>
+  <!-- <link rel="stylesheet" href="build/assets/css/index.css"></link>
   <link rel="stylesheet" href="build/assets/css/bootstrap.css"></link>
   <link rel="stylesheet" href="build/assets/css/dark.css"></link>
-  <link rel="stylesheet" href="build/assets/css/material.css"></link>
+  <link rel="stylesheet" href="build/assets/css/material.css"></link> -->
+
+  <link rel="stylesheet" href="build/assets/css/theme.css"/>
 <link rel="stylesheet" href="build/assets/css/primeng.min.css"></link>
 <link rel="stylesheet" href="build/assets/css/primeicons.css"/>
-<link rel="stylesheet" href="build/assets/css/theme.css">
-<link rel="stylesheet" href="build/assets/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
 
