update with build changes

--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -116,7 +116,9 @@
 
       </tr>
     </ng-template>
-
+    <ng-template pTemplate="summary">
+      {{productList?.length}} products
+  </ng-template>
   </p-table>
 
 
