--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -24,16 +24,6 @@
       <ion-icon name="search"></ion-icon>&nbsp; Select Shop</ion-title>
   </div>
   <ion-row>
-    <!-- <ion-col col-lg-6 col-md-6 col-sm-12 *ngFor="let shop of shopList">
-      <ion-list radio-group [(ngModel)]="shopSelected">
-        <ion-item>
-          <ion-radio item-start value="{{shop.shopId}}"></ion-radio>
-          <ion-label>
-            <p>{{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}} </p>
-          </ion-label>
-        </ion-item>
-      </ion-list>
-    </ion-col> -->
     <ion-col col-lg-12 col-md-12 col-sm-12 col-xs-12>
       <ion-list radio-group [(ngModel)]="shopSelected">
 
@@ -64,7 +54,8 @@
         <ion-icon name="list-box"></ion-icon>&nbsp; Product Details
       </ion-title>
     </div>
-    <ion-row id="viewProduct">
+
+    <ion-row id="viewProduct" *ngIf="productList.length>0">
       <ion-col>
 
         <button ion-button small round color="secondary" [disabled]="!shopSelected" (click)="uploadCatalog=!uploadCatalog">
@@ -80,6 +71,15 @@
       </ion-col>
       <ion-col *ngIf="uploadCatalog">
         <p-fileUpload name="myfile[]" customUpload="true" (uploadHandler)="myUploader($event)"></p-fileUpload>
+      </ion-col>
+    </ion-row>
+
+    <ion-row justify-content-center *ngIf="productList.length==0" class="no-promotion">
+      <ion-col col-md-4 col-lg-4 col-sm-12 col-xs-12 align-self-center>
+        <div>
+          <img src="assets/imgs/search.png" class="dashboard-icons" />
+          <button ion-button clear round>Specify search criteria</button>
+        </div>
       </ion-col>
     </ion-row>
 
