--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -70,7 +70,7 @@
     </div>
     <ion-row justify-content-center>
       <ion-col align-self-center>
-        <p-table #dt [columns]="cols" [value]="inventoryList" [paginator]="true" [rows]="20">
+        <p-table #dt [columns]="cols" sortMode="multiple" [value]="inventoryList" [paginator]="true" [rows]="20">
           <ng-template pTemplate="caption">
             <div style="text-align: right">
               <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
