--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -82,7 +82,8 @@
         </div>
         <ion-card class="content-scrolls">
 
-          <p-table #dt [columns]="cols" [value]="fulfillmentData" [(selection)]="selectedFulfillment" [paginator]="true" [rows]="20"  [scrollable]="true">
+          <p-table #dt [columns]="cols" [value]="fulfillmentData" [(selection)]="selectedFulfillment" [paginator]="true" [rows]="20"
+            [scrollable]="true">
             <ng-template pTemplate="caption">
               <div style="text-align: right">
                 <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
@@ -115,9 +116,9 @@
                   <span *ngIf="!fulfillment.orderSentToMerchant">
                     <ion-icon name="close-circle"></ion-icon>
                   </span>
-                  <td>
+                  <td *ngIf="shopList[0].company != 'BIGBAZAAR'">
                     <button *ngIf="fulfillment.status=='PENDING'" ion-button [color]="fulfillment.status=='FULFILLED'?'dark':'secondary'" [disabled]="fulfillment.disable"
-                      (click)="onClick(fulfillment.status)">
+                      (click)="onClick(fulfillment)">
                       <b ion-text color="light">{{fulfillment.status}}</b>
                     </button>
 
@@ -125,10 +126,16 @@
                       <b ion-text color="dark">{{fulfillment.status}}</b>
                     </button>
                   </td>
-                  <td>
-                    <button ion-button small clear (click)="onRowSelect(fulfillment)" ><ion-icon name="eye"></ion-icon>View</button>
+                  <td *ngIf="shopList[0].company == 'BIGBAZAAR'">
+                    <span>
+                      <b ion-text color="dark">{{fulfillment.status}}</b>
+                    </span>
                   </td>
-                 
+                  <td>
+                    <button ion-button small clear (click)="onRowSelect(fulfillment)">
+                      <ion-icon name="eye"></ion-icon>View</button>
+                  </td>
+
               </tr>
             </ng-template>
           </p-table>
