--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -82,8 +82,7 @@
         </div>
         <ion-card class="content-scrolls">
 
-          <p-table #dt [columns]="cols" [value]="fulfillmentData" [(selection)]="selectedFulfillment" [paginator]="true" [rows]="20"
-            [scrollable]="true">
+          <p-table #dt [columns]="cols" [value]="fulfillmentData" [responsive]="true" [(selection)]="selectedFulfillment"> 
             <ng-template pTemplate="caption">
               <div style="text-align: right">
                 <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
@@ -99,17 +98,18 @@
                 <th>Detail</th>
               </tr>
             </ng-template>
-            <ng-template pTemplate="body" let-fulfillment>
+            <ng-template pTemplate="body" let col of columns let-fulfillment>
               <tr>
-                <td>{{fulfillment.subscriptionId}}</td>
-                <td>{{fulfillment.subscriptionOrderId}}</td>
-                <td>{{fulfillment.customerName}}</td>
-                <td>{{fulfillment.mobileNumber}}</td>
-                <td>{{fulfillment.deliveryDate | date}}</td>
-                <td>{{fulfillment.slot}}</td>
-                <td>{{fulfillment.paymentMethod}}</td>
-                <td>{{fulfillment.city}}</td>
+                <td><span class="ui-column-title">ID</span>{{fulfillment.subscriptionId}}</td>
+                <td><span class="ui-column-title">Order Id</span>{{fulfillment.subscriptionOrderId}}</td>
+                <td><span class="ui-column-title">Customer Name</span>{{fulfillment.customerName}}</td>
+                <td><span class="ui-column-title">Mobile No</span>{{fulfillment.mobileNumber}}</td>
+                <td><span class="ui-column-title">Delivery Date</span>{{fulfillment.deliveryDate | date}}</td>
+                <td><span class="ui-column-title">Slot</span>{{fulfillment.slot}}</td>
+                <td><span class="ui-column-title">Payment Method</span>{{fulfillment.paymentMethod}}</td>
+                <td><span class="ui-column-title">City</span>{{fulfillment.city}}</td>
                 <td>
+                    <span class="ui-column-title">Order Sent To Merchant</span>
                   <span *ngIf="fulfillment.orderSentToMerchant">
                     <ion-icon name="checkmark-circle"></ion-icon>
                   </span>
@@ -117,6 +117,7 @@
                     <ion-icon name="close-circle"></ion-icon>
                   </span>
                   <td *ngIf="shopList[0].company != 'BIGBAZAAR'">
+                      <span class="ui-column-title">Status</span>
                     <button *ngIf="fulfillment.status=='PENDING'" ion-button [color]="fulfillment.status=='FULFILLED'?'dark':'secondary'" [disabled]="fulfillment.disable"
                       (click)="onClick(fulfillment)">
                       <b ion-text color="light">{{fulfillment.status}}</b>
@@ -127,11 +128,13 @@
                     </button>
                   </td>
                   <td *ngIf="shopList[0].company == 'BIGBAZAAR'">
+                      <span class="ui-column-title">Status</span>
                     <span>
                       <b ion-text color="dark">{{fulfillment.status}}</b>
                     </span>
                   </td>
                   <td>
+                      <span class="ui-column-title">Detail</span>
                     <button ion-button small clear (click)="onRowSelect(fulfillment)">
                       <ion-icon name="eye"></ion-icon>View</button>
                   </td>
