--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -47,7 +47,7 @@
               <ion-item>
                 <ion-radio item-start value="{{shop.shopId}}"></ion-radio>
                 <ion-label>
-                  <p ion-text text-left>{{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}} </p>
+                  <p ion-text text-left>{{shop.shopId}}. {{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}} </p>
                 </ion-label>
               </ion-item>
             </ion-col>
