--- a/src/pages/error/error.html
+++ b/src/pages/error/error.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-title>
-        <ion-icon>&nbsp;Errors</ion-icon>
+        Errors
     </ion-title>
 </ion-header>
 <ion-content padding>
