--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -30,15 +30,14 @@
         <ion-list radio-group [(ngModel)]="shopSelected">
 
           <ion-row padding>
-              <ion-col col-lg-6 col-md-6 col-sm-12 *ngFor="let shop of shopList; let i = index">
-              <ion-item>
-                <ion-radio *ngIf='i==0' checked item-start value="{{shop.shopId}}"></ion-radio>
-                <ion-radio *ngIf='i!=0' item-start value="{{shop.shopId}}"></ion-radio>
-                <ion-label>
-                  <p ion-text text-wrap>{{shop.shopId}}. {{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}} </p>
-                </ion-label>
-              </ion-item>
-            </ion-col>
+              <ion-col col-lg-6 col-md-6 col-sm-12 *ngFor="let shop of shopList">
+                  <ion-item>
+                    <ion-radio item-start value="{{shop.shopId}}"></ion-radio>
+                    <ion-label>
+                      <p ion-text text-left>{{shop.shopId}}. {{shop.shopName}}, {{shop.shopLocality}} , {{shop.shopCity}} </p>
+                    </ion-label>
+                  </ion-item>
+                </ion-col>
             <ion-col col-12>
               <button margin-left ion-button (click)="viewProductSelected = true; viewProduct(shopSelected)" [disabled]="!shopSelected"
                 margin-top>View Products</button>
@@ -84,17 +83,27 @@
         <button ion-button small round outline color="secondary" [disabled]="(!viewProductSelected || errorData.length==0)" (click)="presentErrorModal()">
           <ion-icon name="information-circle" icon-left></ion-icon> &nbsp;Errors</button>
       </ion-col>
-      <ion-col showWhen="android,ios">
-        <ul>
-          <li><button ion-button small color="secondary"> <ion-icon icon-left name="cloud-upload"></ion-icon> &nbsp;Upload Catalog</button>
-            <button ion-button small outline color="secondary"><ion-icon name="information-circle" icon-left></ion-icon> &nbsp;Error</button></li>
-          <li>
-            <button ion-button small > <ion-icon name="add-circle" icon-left></ion-icon> &nbsp;Add</button>
-            <button ion-button small color="secondary"> <ion-icon name="trash" icon-left></ion-icon>&nbsp;Delete</button>
-            <button ion-button small color="secondary"> <ion-icon name="refresh" icon-left></ion-icon> &nbsp;Refresh</button>
-           
-          </li>          
-        </ul>
+      <ion-col showWhen="android,ios" no-paading>
+        <ion-row>
+          <ion-col col-6>
+              <button style="width:180px" ion-button small round color="secondary" [disabled]="!viewProductSelected" (click)="uploadCatalog=!uploadCatalog"> <ion-icon icon-left name="cloud-upload"></ion-icon> &nbsp;Upload Catalog</button>
+          </ion-col>
+          <ion-col col-6>
+              <button style="width:180px" ion-button round small (click)="deleteAll()"><ion-icon icon-left name="trash"></ion-icon>Delete Catalog</button>
+          </ion-col>
+          <ion-col col-6>
+              <button style="width:180px" ion-button small round [disabled]="!viewProductSelected" (click)="showDialogToAdd()"> <ion-icon name="add-circle" icon-left></ion-icon> &nbsp;Add</button>
+          </ion-col>
+          <ion-col col-6>
+              <button style="width:180px" ion-button small round color="secondary" [disabled]="!viewProductSelected || !activateDeleteButton" (click)="deleteSelected()"> <ion-icon name="trash" icon-left></ion-icon>&nbsp;Delete</button>
+          </ion-col>
+          <ion-col col-6>
+              <button style="width:180px" ion-button small round outline color="secondary"><ion-icon name="information-circle" icon-left></ion-icon> &nbsp;Error</button>
+          </ion-col>
+          <ion-col col-6>
+              <button style="width:180px" ion-button small round color="secondary"> <ion-icon name="refresh" icon-left></ion-icon> &nbsp;Refresh</button>
+          </ion-col>
+        </ion-row>        
       </ion-col>
 
 
@@ -125,14 +134,10 @@
           [(selection)]="selectedProduct" [paginator]="true" [rows]="15" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)"
           [scrollable]="true" [style]="{width:'1080px'}">
           <ng-template pTemplate="caption">
-            <div style="text-align: right">
+            <div style="text-align: left">
               <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
               <input type="text" pInputText size="50" placeholder="Global Filter" (input)="dt.filterGlobal($event.target.value, 'contains')"
-                style="width:50%">
-            </div>
-            <div style="text-align: left">
-              <button ion-button round small (click)="deleteAll()">
-                <ion-icon icon-left name="trash"></ion-icon>Delete Catalog</button>
+                style="max-width:50%">
             </div>
           </ng-template>
           <ng-template pTemplate="header" let-columns>
@@ -399,9 +404,12 @@
 
 
   <p-footer>
-    <div class="ui-dialog-buttonpane ui-helper-clearfix">
+    <div class="ui-dialog-buttonpane ui-helper-clearfix" style="float: left;">
       <button ion-button (click)="save()">Save</button>
     </div>
+    <div class="ui-dialog-buttonpane ui-helper-clearfix" style="float: left;">
+        <button ion-button (click)="displayDialog=false">Close</button>
+      </div>
   </p-footer>
 </p-dialog>
 
