--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,6 +10,40 @@
 <ion-content padding>
  <ion-grid>
    <ion-row>
+     <ion-col col-lg-3 col-md-3 col-sm-6 col-xs-6>
+       <ion-card>
+         <ion-card-content>
+            <p ion-text text-center color="primary"><b>Cash Collected</b></p>
+           <h2 ion-text text-center color="secondary">Rs.400</h2>
+         </ion-card-content>
+       </ion-card>
+     </ion-col>
+     <ion-col col-lg-3 col-md-3 col-sm-6 col-xs-6>
+        <ion-card>
+          <ion-card-content>
+             <p ion-text text-center color="primary"><b>Online Payment</b></p>
+            <h2 ion-text text-center color="secondary">Rs.100</h2>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col col-lg-3 col-md-3 col-sm-6 col-xs-6>
+          <ion-card>
+            <ion-card-content>
+               <p ion-text text-center color="primary"><b>Refund</b></p>
+              <h2 ion-text text-center color="secondary">Rs.0</h2>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        <ion-col col-lg-3 col-md-3 col-sm-6 col-xs-6>
+            <ion-card>
+              <ion-card-content>
+                 <p ion-text text-center color="primary"><b>Inventory</b></p>
+                <h2  ion-text text-center color="secondary">Rs.87999</h2>
+              </ion-card-content>
+            </ion-card>
+          </ion-col>
+   </ion-row>
+   <ion-row>
      <ion-col col-md-3 col-lg-3 col-xs-6 col-sm-6 align-self-center >
        <ion-card>
          <ion-col col-12 align-self-center>
